2° etapa, adicionar conteúdos restantes ao main.

--- a/home/index.html
+++ b/home/index.html
@@ -38,7 +38,11 @@
         <p>Nossa clínica está pronta para receber nossos pacientes através de uma excelente estrutura, comodidade e com a segurança de que você precisam.</p>
       </div>
       <div>
-        <h2>Aqui na nossa clínica você vai encontrar:</h2>
+        <div>
+          <img src="/assets/medico.jpg"/>
+        </div>
+        <div>
+          <h2>Aqui na nossa clínica você vai encontrar:</h2>
         <ul>
           <li>Horário flexível. Atendemos de segunda à sábado.</li>
           <li>Estacionamento amplo com 600 vagas.</li>
@@ -47,6 +51,7 @@
           <li>Excelente localização.</li>
           <li>Entrega de exames em sua residência.</li>
         </ul>
+        </div>
       </div>
     </section>
     
@@ -57,19 +62,19 @@
       </div>
       <div>
         <div>
-          <img src=""/>
-          <h3></h3>
+          <img src="/assets/ortopedia1.png"/>
+          <h3>ORTOPEDIA</h3>
         </div>
         <div>
-          <img src=""/>
-          <h3></h3>
+          <img src="/assets/pediatra.png"/>
+          <h3>PEDIATRIA</h3>
         </div>
         <div>
-          <img src=""/>
-          <h3></h3>
+          <img src="/assets/geriatra.png"/>
+          <h3>GERIATRIA</h3>
         </div>
         <div>
-          <a href="#"></a>
+          <a href="#">VER HORÁRIOS</a>
         </div>
       </div>
     </section>
