--- a/especialidades.html
+++ b/especialidades.html
@@ -37,6 +37,196 @@
         <h3>Conheça as nossas especialidades</h3>
       </div>
     </section>
+    <section>
+      <div>
+        <h4>Ortopedia</h4>
+        <p>A ortopedia é a especialidade médica que cuida da saúde relacionadas aos elementos do aparelho locomotor, como ossos, músculos, ligamentos e articulações.</p>
+      </div>
+      <div>
+        <img src=""/>
+        <table>
+          <thead>
+            <tr>
+              <td>Dias</td>
+              <td>Horários</td>
+              <td>Médico(a)</td>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Segunda e Quarta</td>
+              <td>8:00 ás 13:00</td>
+              <td>Dra. Daniele Almeida</td>
+            </tr>
+            <tr>
+              <td>Terça, Quinta e Sexta</td>
+              <td>14:00 ás 21:00</td>
+              <td>Dr. Daniel Souza</td>
+            </tr>
+            <tr>
+              <td>Sábado</td>
+              <td>8:00 ás 21:00</td>
+              <td>Dr. Manoel Bento</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </section>
+    <section>
+      <div>
+        <h4>Pediatria</h4>
+        <p>A pediatria é a especialidade médica dedicada à assistência à criança e ao adolescente, nos seus diversos aspectos, sejam eles preventivos ou curativos.</p>
+      </div>
+      <div>
+        <img src=""/>
+        <table>
+          <thead>
+            <tr>
+              <td>Dias</td>
+              <td>Horários</td>
+              <td>Médico(a)</td>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Segunda e Quarta</td>
+              <td>8:00 ás 15:00</td>
+              <td>Dra. Elaine pinheiro</td>
+            </tr>
+            <tr>
+              <td>Terça, Quinta e Sexta</td>
+              <td>13:00 ás 21:00</td>
+              <td>Dr. Anderson Ramos</td>
+            </tr>
+            <tr>
+              <td>Sábado</td>
+              <td>8:00 ás 12:00</td>
+              <td>Dra. Manoela Foster</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </section>
+    <section>
+      <div>
+        <h4>Geriatria</h4>
+        <p>Medicina geriátrica ou geriatria é o ramo da medicina que foca o estudo, a prevenção e o tratamento de doenças e da incapacidade em idades avançadas.</p>
+      </div>
+      <div>
+        <img src=""/>
+        <table>
+          <thead>
+            <tr>
+              <td>Dias</td>
+              <td>Horários</td>
+              <td>Médico(a)</td>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Segunda e Quinta</td>
+              <td>9:00 ás 12:00</td>
+              <td>Dr. Antônio Freitas</td>
+            </tr>
+            <tr>
+              <td>Terça e Quarta</td>
+              <td>9:00 ás 16:00</td>
+              <td>Dr. Alfred Conceição</td>
+            </tr>
+            <tr>
+              <td>Sexta</td>
+              <td>8:00 ás 19:00</td>
+              <td>Dr. Almir Aguiar</td>
+            </tr>
+            <tr>
+              <td>Sábado</td>
+              <td>8:00 ás 14:00</td>
+              <td>Dra. Andrea Almeida</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </section>
+    <section>
+      <div>
+        <h4>Psicologia</h4>
+        <p>Psicologia é a especialidade médica que trata da mente, do estudo e análise de seus processos e comportamento de indivíduos e grupos humanos em diferentes situações.</p>
+      </div>
+      <div>
+        <img src=""/>
+        <table>
+          <thead>
+            <tr>
+              <td>Dias</td>
+              <td>Horários</td>
+              <td>Médico(a)</td>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Segunda, Terça e Quarta</td>
+              <td>8:00 ás 21:00</td>
+              <td>Dra. Diane Faguntes</td>
+            </tr>
+            <tr>
+              <td>Quinta e Sexta</td>
+              <td>14:00 ás 18:00</td>
+              <td>Dr. Daniel Dias</td>
+            </tr>
+            <tr>
+              <td>Sábado</td>
+              <td>10:00 ás 15:00</td>
+              <td>Dra. Beatriz Luz</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </section>
+    <section>
+      <div>
+        <h4>Fisioterapia</h4>
+        <p>Fisioterapia é uma ciência da saúde aplicada ao estudo, diagnóstico, prevenção e tratamento de disfunções cinéticas funcionais de órgãos e sistemas.</p>
+      </div>
+      <div>
+        <img src=""/>
+        <table>
+          <thead>
+            <tr>
+              <td>Dias</td>
+              <td>Horários</td>
+              <td>Médico(a)</td>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Segunda e Quinta</td>
+              <td>11:00 ás 20:00</td>
+              <td>Dr. Alberto de Paula</td>
+            </tr>
+            <tr>
+              <td>Terça e Quarta</td>
+              <td>8:00 ás 15:00</td>
+              <td>Dra. Maria Fernades</td>
+            </tr>
+            <tr>
+              <td>Terça e Sexta</td>
+              <td>14:00 ás 21:00</td>
+              <td>Dra. Elaine Peixoto</td>
+            </tr>
+            <tr>
+              <td>Terça e Quinta</td>
+              <td>8:00 ás 14:00</td>
+              <td>Dra. Elaine Peixoto</td>
+            </tr>
+            <td>
+              <tr>Quarta e Sábado</tr>
+              <tr>8:00 ás 21:00</tr>
+              <tr>Dra. Bianca Rocha</tr>
+            </td>
+          </tbody>
+        </table>
+      </div>
+    </section>
   </main>
 
   <footer>
