Foram adicionadas as imagens da pagina de especialidades.

--- a/especialidades.html
+++ b/especialidades.html
@@ -43,7 +43,7 @@
         <p>A ortopedia é a especialidade médica que cuida da saúde relacionadas aos elementos do aparelho locomotor, como ossos, músculos, ligamentos e articulações.</p>
       </div>
       <div>
-        <img src=""/>
+        <img src="/assets/ortopedia.png"/>
         <table>
           <thead>
             <tr>
@@ -78,7 +78,7 @@
         <p>A pediatria é a especialidade médica dedicada à assistência à criança e ao adolescente, nos seus diversos aspectos, sejam eles preventivos ou curativos.</p>
       </div>
       <div>
-        <img src=""/>
+        <img src="/assets/pediatra2.png"/>
         <table>
           <thead>
             <tr>
@@ -113,7 +113,7 @@
         <p>Medicina geriátrica ou geriatria é o ramo da medicina que foca o estudo, a prevenção e o tratamento de doenças e da incapacidade em idades avançadas.</p>
       </div>
       <div>
-        <img src=""/>
+        <img src="/assets/geriatra.png"/>
         <table>
           <thead>
             <tr>
@@ -153,7 +153,7 @@
         <p>Psicologia é a especialidade médica que trata da mente, do estudo e análise de seus processos e comportamento de indivíduos e grupos humanos em diferentes situações.</p>
       </div>
       <div>
-        <img src=""/>
+        <img src="/assets/psicologo.png"/>
         <table>
           <thead>
             <tr>
@@ -188,7 +188,7 @@
         <p>Fisioterapia é uma ciência da saúde aplicada ao estudo, diagnóstico, prevenção e tratamento de disfunções cinéticas funcionais de órgãos e sistemas.</p>
       </div>
       <div>
-        <img src=""/>
+        <img src="/assets/fisioterapia.png"/>
         <table>
           <thead>
             <tr>
