--- a/especialidades.html
+++ b/especialidades.html
@@ -12,7 +12,7 @@
 <body>
   
   <header>
-    <div class="subdivisao-one">
+    <div class="secao-um-header">
       <a herf="#">
         <img src="/assets/logo.png"/>
       </a>
@@ -25,7 +25,7 @@
   </header>
 
   <main>
-    <section>
+    <section class="secao-um-navegacao">
       <div>
         <a href="#">Ortopedia</a>
         <a href="#">Pediatria</a>
@@ -37,7 +37,7 @@
         <h3>Conheça as nossas especialidades</h3>
       </div>
     </section>
-    <section>
+    <section class="secao-ortopedia">
       <div>
         <h4>Ortopedia</h4>
         <p>A ortopedia é a especialidade médica que cuida da saúde relacionadas aos elementos do aparelho locomotor, como ossos, músculos, ligamentos e articulações.</p>
@@ -72,7 +72,7 @@
         </table>
       </div>
     </section>
-    <section>
+    <section class="secao-pediatria">
       <div>
         <h4>Pediatria</h4>
         <p>A pediatria é a especialidade médica dedicada à assistência à criança e ao adolescente, nos seus diversos aspectos, sejam eles preventivos ou curativos.</p>
@@ -107,7 +107,7 @@
         </table>
       </div>
     </section>
-    <section>
+    <section class="secao-geriatria">
       <div>
         <h4>Geriatria</h4>
         <p>Medicina geriátrica ou geriatria é o ramo da medicina que foca o estudo, a prevenção e o tratamento de doenças e da incapacidade em idades avançadas.</p>
@@ -147,7 +147,7 @@
         </table>
       </div>
     </section>
-    <section>
+    <section class="secao-psicologia">
       <div>
         <h4>Psicologia</h4>
         <p>Psicologia é a especialidade médica que trata da mente, do estudo e análise de seus processos e comportamento de indivíduos e grupos humanos em diferentes situações.</p>
@@ -182,7 +182,7 @@
         </table>
       </div>
     </section>
-    <section>
+    <section class="secao-fisioterapia">
       <div>
         <h4>Fisioterapia</h4>
         <p>Fisioterapia é uma ciência da saúde aplicada ao estudo, diagnóstico, prevenção e tratamento de disfunções cinéticas funcionais de órgãos e sistemas.</p>
