--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 
 <head>
   
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>CMlife - home</title>
+  <link rel="stylesheet" href="css\estilo.css"/>
   
 </head>
 
