Atualizações 1.0.0 (Header e primeira seção)

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <a herf="#">
         <img src="/assets/logo.png"/>
       </a>
-      <nav>
+      <nav class="links-topo">
         <a href="#">Sobre</a>
         <a href="#">Especialidades</a>
         <a href="#">Contato</a>
@@ -30,9 +30,10 @@
   
   <main>
     <section class="secao-um-banner-home">
-      <img src="/assets/recepcao.png"/>
       <div class="title-banner">
-        <h1>CLÍNICA MÉDICA LIFE AQUI A GENTE CUIDA DE VOCÊ</h1>
+        <div class="banner">
+          <h1>CLÍNICA MÉDICA LIFE AQUI A GENTE CUIDA DE VOCÊ</h1>
+        </div>
       </div>
     </section>
     
