--- a/index.html
+++ b/index.html
@@ -30,10 +30,9 @@
   
   <main>
     <section class="secao-um-banner-home">
+      <div class="banner"></div>
       <div class="title-banner">
-        <div class="banner">
-          <h1>CLÍNICA MÉDICA LIFE AQUI A GENTE CUIDA DE VOCÊ</h1>
-        </div>
+        <h1>CLÍNICA MÉDICA LIFE AQUI A GENTE CUIDA DE VOCÊ</h1>
       </div>
     </section>
     
