--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   
   <header>
     <div class="secao-um-header">
-      <a herf="#">
+      <a herf="#" class="logo-topo">
         <img src="/assets/logo.png"/>
       </a>
       <nav class="links-topo">
@@ -30,9 +30,12 @@
   
   <main>
     <section class="secao-um-banner-home">
-      <div class="banner"></div>
-      <div class="title-banner">
-        <h1>CLÍNICA MÉDICA LIFE AQUI A GENTE CUIDA DE VOCÊ</h1>
+      <div class="banner">
+        <div  class="titulo-banner">
+          <div class="titulo">
+            <h1>CLÍNICA MÉDICA LIFE<br> AQUI A GENTE CUIDA DE VOCÊ</h1>
+          </div>  
+        </div>
       </div>
     </section>
     
