Atualização 1.0.3 (Segunda seção e alguma alteração de texto)

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </header>
   
   <main>
-    <section class="secao-um-banner-home">
+    <section class="primeira-secao-banner-home">
       <div class="banner">
         <div  class="titulo-banner">
           <div class="titulo">
@@ -39,17 +39,17 @@
       </div>
     </section>
     
-    <section class="secao-dois-sobre">
-      <div>
+    <section class="segunda-secao-sobre">
+      <div class="sobre">
         <h2>Sobre a clínica</h2>
-        <p>Nossa clínica está pronta para receber nossos pacientes através de uma excelente estrutura, comodidade e com a segurança de que você precisam.</p>
+        <p>Nossa clínica está pronta para receber nossos pacientes através de uma excelente<br> estrutura, comodidade e com a segurança de que você precisam.</p>
       </div>
-      <div>
+      <div class="img-e-lista">
         <div>
           <img src="/assets/medico.jpg"/>
         </div>
         <div>
-          <h2>Aqui na nossa clínica você vai encontrar:</h2>
+          <h3>Aqui na nossa clínica você vai encontrar:</h3>
         <ul>
           <li>Horário flexível. Atendemos de segunda à sábado.</li>
           <li>Estacionamento amplo com 600 vagas.</li>
@@ -62,7 +62,7 @@
       </div>
     </section>
     
-    <section class="secao-tres-especialidades">
+    <section class="terceira-secao-especialidades">
       <div>
         <h2>Uma clínica de multiespecialidade</h2>
         <p>Nossa clínica possui diversas especialidades. Como ortopedia, pediatra, geriatria, psicologia, fisioterapia e outros</p>
