Atualização 1.0.5 (Ultimas alterções antes de confgurar para site responsivo)

--- a/index.html
+++ b/index.html
@@ -91,19 +91,19 @@
       <p class="paragrafo-secao-contato">Nossa clínica médica está aberto de <strong>à sábado das 6:00 às 21:00</strong></p>
       <p class="paragrafo-secao-contato">Através do telefone/WhatsApp <strong>(21) 99966-5555</strong> você pode fazer o agendamento de consultas e exames.</p>
       <p class="paragrafo-secao-contato">Estamos localizados no estacionamento do Via Parque Shopping <strong>av. Ayrton Senna, 3000 - Barra da Tijuca, Rio de Janeiro</strong>.</p>
-      <iframe></iframe>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14692.471710812997!2d-43.3641911!3d-22.9826906!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x539cb07246f0e38d!2sVia%20Parque%20Shopping!5e0!3m2!1spt-BR!2sbr!4v1612707978931!5m2!1spt-BR!2sbr" width="100%" height="350" frameborder="0" style="border:0" allowfullscreen"></iframe>
     </section>
   </main>
   
-  <footer>
-    <div>
+  <footer class="rodape">
+    <div class="conteudo-rodape">
       <div>
-        <img src="/assets/logo.png"/>
+        <img class="logo-rodape" src="/assets/logo.png"/>
       </div>
-      <div>
-        <p>Telefone e WhatsApp: (21) 99966-5555</p>
-        <p>Endereço: Av. Ayrton Senna, 3000 - Barra da Tijuca, Rio de Janeiro</p>
-        <p>©2020 Clínica Médica Life - Todos os direitos reservados</p>
+      <div class="contato-rodape">
+        <p class="paragrafo-rodape">Telefone e WhatsApp: (21) 99966-5555</p>
+        <p class="paragrafo-rodape">Endereço: Av. Ayrton Senna, 3000 - Barra da Tijuca, Rio de Janeiro</p>
+        <p class="paragrafo-rodape">©2020 Clínica Médica Life - Todos os direitos reservados</p>
       </div>
     </div>
   </footer>
