Pequenas atualizações na pagina home, inzerção do arquivo estilo-especialidades.css e ja aplicado o estilo padrão do header.

--- a/especialidades.html
+++ b/especialidades.html
@@ -6,6 +6,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>CMlife - home</title>
+  <link rel="stylesheet" href="/css/estilo-especilaidades.css">
   
 </head>
 
@@ -13,10 +14,10 @@
   
   <header>
     <div class="secao-um-header">
-      <a herf="#">
+      <a herf="#" class="logo-topo">
         <img src="/assets/logo.png"/>
       </a>
-      <nav>
+      <nav class="links-topo">
         <a href="#">Sobre</a>
         <a href="#">Especialidades</a>
         <a href="#">Contato</a>
