Alterações e configurações na pagina especialidades.

--- a/especialidades.html
+++ b/especialidades.html
@@ -7,6 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>CMlife - home</title>
   <link rel="stylesheet" href="/css/estilo-especilaidades.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap" rel="stylesheet">
   
 </head>
 
@@ -27,18 +30,18 @@
 
   <main>
     <section class="secao-um-navegacao">
-      <div>
+      <div class="links-secao-navegacao">
         <a href="#">Ortopedia</a>
         <a href="#">Pediatria</a>
         <a href="#">Geriatria</a>
         <a href="#">Psicologia</a>
         <a href="#">Fisioterapia</a>
       </div>
-      <div>
+    </section>
+    <section class="conheca-especialidades">
+      <div class="titulo-secao-especialidades">
         <h3>Conheça as nossas especialidades</h3>
       </div>
-    </section>
-    <section class="secao-ortopedia">
       <div>
         <h4>Ortopedia</h4>
         <p>A ortopedia é a especialidade médica que cuida da saúde relacionadas aos elementos do aparelho locomotor, como ossos, músculos, ligamentos e articulações.</p>
