--- a/especialidades.html
+++ b/especialidades.html
@@ -28,7 +28,7 @@
     </div>
   </header>
 
-  <main>
+  <main class="conteudo-da-pagina">
     <section class="secao-um-navegacao">
       <div class="links-secao-navegacao">
         <a href="#">Ortopedia</a>
@@ -42,11 +42,11 @@
       <div class="titulo-secao-especialidades">
         <h3>Conheça as nossas especialidades</h3>
       </div>
-      <div>
-        <h4>Ortopedia</h4>
-        <p>A ortopedia é a especialidade médica que cuida da saúde relacionadas aos elementos do aparelho locomotor, como ossos, músculos, ligamentos e articulações.</p>
-      </div>
-      <div>
+      <div class="secao-ortopedia">
+        <div class="descricao-secao-especialidades">
+          <h4>Ortopedia</h4>
+          <p>A ortopedia é a especialidade médica que cuida da saúde relacionadas aos elementos do aparelho locomotor, como ossos, músculos, ligamentos e articulações.</p>
+        </div>
         <img src="/assets/ortopedia.png"/>
         <table>
           <thead>
