Alterações no html e css da seção ortopedia

--- a/especialidades.html
+++ b/especialidades.html
@@ -28,57 +28,57 @@
     </div>
   </header>
 
+  <div class="secao-um-navegacao">
+    <div class="links-secao-navegacao">
+      <a href="#">Ortopedia</a>
+      <a href="#">Pediatria</a>
+      <a href="#">Geriatria</a>
+      <a href="#">Psicologia</a>
+      <a href="#">Fisioterapia</a>
+    </div>
+  </div>
+
+  <div class="titulo-secao-especialidades">
+    <h1>Conheça as nossas especialidades</h1>
+  </div>
+
   <main class="conteudo-da-pagina">
-    <section class="secao-um-navegacao">
-      <div class="links-secao-navegacao">
-        <a href="#">Ortopedia</a>
-        <a href="#">Pediatria</a>
-        <a href="#">Geriatria</a>
-        <a href="#">Psicologia</a>
-        <a href="#">Fisioterapia</a>
-      </div>
-    </section>
     <section class="conheca-especialidades">
-      <div class="titulo-secao-especialidades">
-        <h3>Conheça as nossas especialidades</h3>
+      <div class="descricao-secao-especialidades">
+        <h2>Ortopedia</h2>
+        <p>A ortopedia é a especialidade médica que cuida da saúde relacionadas aos elementos do aparelho locomotor, como ossos, músculos, ligamentos e articulações.</p>
       </div>
-      <div class="secao-ortopedia">
-        <div class="descricao-secao-especialidades">
-          <h4>Ortopedia</h4>
-          <p>A ortopedia é a especialidade médica que cuida da saúde relacionadas aos elementos do aparelho locomotor, como ossos, músculos, ligamentos e articulações.</p>
-        </div>
-        <img src="/assets/ortopedia.png"/>
-        <table>
-          <thead>
-            <tr>
-              <td>Dias</td>
-              <td>Horários</td>
-              <td>Médico(a)</td>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>Segunda e Quarta</td>
-              <td>8:00 ás 13:00</td>
-              <td>Dra. Daniele Almeida</td>
-            </tr>
-            <tr>
-              <td>Terça, Quinta e Sexta</td>
-              <td>14:00 ás 21:00</td>
-              <td>Dr. Daniel Souza</td>
-            </tr>
-            <tr>
-              <td>Sábado</td>
-              <td>8:00 ás 21:00</td>
-              <td>Dr. Manoel Bento</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
+      <img src="/assets/ortopedia.png"/>
+      <table>
+        <thead>
+          <tr>
+            <td>Dias</td>
+            <td>Horários</td>
+            <td>Médico(a)</td>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Segunda e Quarta</td>
+            <td>8:00 ás 13:00</td>
+            <td>Dra. Daniele Almeida</td>
+          </tr>
+          <tr>
+            <td>Terça, Quinta e Sexta</td>
+            <td>14:00 ás 21:00</td>
+            <td>Dr. Daniel Souza</td>
+          </tr>
+          <tr>
+            <td>Sábado</td>
+            <td>8:00 ás 21:00</td>
+            <td>Dr. Manoel Bento</td>
+          </tr>
+        </tbody>
+      </table>
     </section>
     <section class="secao-pediatria">
       <div>
-        <h4>Pediatria</h4>
+        <h2>Pediatria</h2>
         <p>A pediatria é a especialidade médica dedicada à assistência à criança e ao adolescente, nos seus diversos aspectos, sejam eles preventivos ou curativos.</p>
       </div>
       <div>
@@ -113,7 +113,7 @@
     </section>
     <section class="secao-geriatria">
       <div>
-        <h4>Geriatria</h4>
+        <h2>Geriatria</h2>
         <p>Medicina geriátrica ou geriatria é o ramo da medicina que foca o estudo, a prevenção e o tratamento de doenças e da incapacidade em idades avançadas.</p>
       </div>
       <div>
@@ -153,7 +153,7 @@
     </section>
     <section class="secao-psicologia">
       <div>
-        <h4>Psicologia</h4>
+        <h2>Psicologia</h2>
         <p>Psicologia é a especialidade médica que trata da mente, do estudo e análise de seus processos e comportamento de indivíduos e grupos humanos em diferentes situações.</p>
       </div>
       <div>
@@ -188,7 +188,7 @@
     </section>
     <section class="secao-fisioterapia">
       <div>
-        <h4>Fisioterapia</h4>
+        <h2>Fisioterapia</h2>
         <p>Fisioterapia é uma ciência da saúde aplicada ao estudo, diagnóstico, prevenção e tratamento de disfunções cinéticas funcionais de órgãos e sistemas.</p>
       </div>
       <div>
