Alteração nas anotações

--- a/especialidades.html
+++ b/especialidades.html
@@ -43,8 +43,8 @@
   </div>
 
   <main class="conteudo-da-pagina">
-    <section class="conheca-especialidades">
-      <div class="descricao-secao-especialidades">
+    <section class="secao-ortopedia">
+      <div class="descricao-secao-ortopedia">
         <h2>Ortopedia</h2>
         <p>A ortopedia é a especialidade médica que cuida da saúde relacionadas aos elementos do aparelho locomotor, como ossos, músculos, ligamentos e articulações.</p>
       </div>
