Atualização 1.0.7 (Finalizado o desenvolvimento do estilo da pagina de especicialidades)

--- a/especialidades.html
+++ b/especialidades.html
@@ -44,7 +44,7 @@
 
   <main class="conteudo-da-pagina">
     <section class="secao-ortopedia">
-      <div class="descricao-secao-ortopedia">
+      <div class="ortopedia">
         <h2>Ortopedia</h2>
         <p>A ortopedia é a especialidade médica que cuida da saúde relacionadas aos elementos do aparelho locomotor, como ossos, músculos, ligamentos e articulações.</p>
       </div>
@@ -52,9 +52,9 @@
       <table>
         <thead>
           <tr>
-            <td>Dias</td>
-            <td>Horários</td>
-            <td>Médico(a)</td>
+            <th>Dias</th>
+            <th>Horários</th>
+            <th>Médico(a)</th>
           </tr>
         </thead>
         <tbody>
@@ -77,18 +77,18 @@
       </table>
     </section>
     <section class="secao-pediatria">
-      <div>
+      <div class="pediatria">
         <h2>Pediatria</h2>
         <p>A pediatria é a especialidade médica dedicada à assistência à criança e ao adolescente, nos seus diversos aspectos, sejam eles preventivos ou curativos.</p>
       </div>
+      <img src="/assets/pediatra2.png"/>
       <div>
-        <img src="/assets/pediatra2.png"/>
         <table>
           <thead>
             <tr>
-              <td>Dias</td>
-              <td>Horários</td>
-              <td>Médico(a)</td>
+              <th>Dias</th>
+              <th>Horários</th>
+              <th>Médico(a)</th>
             </tr>
           </thead>
           <tbody>
@@ -112,18 +112,18 @@
       </div>
     </section>
     <section class="secao-geriatria">
-      <div>
+      <div class="geriatria">
         <h2>Geriatria</h2>
         <p>Medicina geriátrica ou geriatria é o ramo da medicina que foca o estudo, a prevenção e o tratamento de doenças e da incapacidade em idades avançadas.</p>
       </div>
+      <img src="/assets/geriatra.png"/>
       <div>
-        <img src="/assets/geriatra.png"/>
         <table>
           <thead>
             <tr>
-              <td>Dias</td>
-              <td>Horários</td>
-              <td>Médico(a)</td>
+              <th>Dias</th>
+              <th>Horários</th>
+              <th>Médico(a)</th>
             </tr>
           </thead>
           <tbody>
@@ -152,18 +152,18 @@
       </div>
     </section>
     <section class="secao-psicologia">
-      <div>
+      <div class="psicologia">
         <h2>Psicologia</h2>
         <p>Psicologia é a especialidade médica que trata da mente, do estudo e análise de seus processos e comportamento de indivíduos e grupos humanos em diferentes situações.</p>
       </div>
+      <img src="/assets/psicologo.png"/>
       <div>
-        <img src="/assets/psicologo.png"/>
         <table>
           <thead>
             <tr>
-              <td>Dias</td>
-              <td>Horários</td>
-              <td>Médico(a)</td>
+              <th>Dias</th>
+              <th>Horários</th>
+              <th>Médico(a)</th>
             </tr>
           </thead>
           <tbody>
@@ -187,18 +187,18 @@
       </div>
     </section>
     <section class="secao-fisioterapia">
-      <div>
+      <div class="fisioterapia">
         <h2>Fisioterapia</h2>
         <p>Fisioterapia é uma ciência da saúde aplicada ao estudo, diagnóstico, prevenção e tratamento de disfunções cinéticas funcionais de órgãos e sistemas.</p>
       </div>
+      <img src="/assets/fisioterapia.png"/>
       <div>
-        <img src="/assets/fisioterapia.png"/>
         <table>
           <thead>
             <tr>
-              <td>Dias</td>
-              <td>Horários</td>
-              <td>Médico(a)</td>
+              <th>Dias</th>
+              <th>Horários</th>
+              <th>Médico(a)</th>
             </tr>
           </thead>
           <tbody>
@@ -222,26 +222,26 @@
               <td>8:00 ás 14:00</td>
               <td>Dra. Elaine Peixoto</td>
             </tr>
-            <td>
-              <tr>Quarta e Sábado</tr>
-              <tr>8:00 ás 21:00</tr>
-              <tr>Dra. Bianca Rocha</tr>
-            </td>
+            <tr>
+              <td>Quarta e Sábado</td>
+              <td>8:00 ás 21:00</td>
+              <td>Dra. Bianca Rocha</td>
+            </tr>
           </tbody>
         </table>
       </div>
     </section>
   </main>
 
-  <footer>
-    <div>
-      <div>
+  <footer class="rodape">
+    <div class="conteudo-rodape">
+      <div class="logo-rodape">
         <img src="/assets/logo.png"/>
       </div>
-      <div>
-        <p>Telefone e WhatsApp: (21) 99966-5555</p>
-        <p>Endereço: Av. Ayrton Senna, 3000 - Barra da Tijuca, Rio de Janeiro</p>
-        <p>©2020 Clínica Médica Life - Todos os direitos reservados</p>
+      <div class="contato-rodape">
+        <p class="paragrafo-rodape">Telefone e WhatsApp: (21) 99966-5555</p>
+        <p class="paragrafo-rodape">Endereço: Av. Ayrton Senna, 3000 - Barra da Tijuca, Rio de Janeiro</p>
+        <p class="paragrafo-rodape">©2020 Clínica Médica Life - Todos os direitos reservados</p>
       </div>
     </div>
   </footer>
