--- a/especialidades.html
+++ b/especialidades.html
@@ -17,7 +17,7 @@
   
   <header>
     <div class="secao-um-header">
-      <a herf="#" class="logo-topo">
+      <a href="#" class="logo-topo">
         <img src="/assets/logo.png"/>
       </a>
       <nav class="links-topo">
