--- a/especialidades.html
+++ b/especialidades.html
@@ -18,7 +18,7 @@
   <header>
     <div class="secao-um-header">
       <a href="#" class="logo-topo">
-        <img src="/assets/logo.png"/>
+        <img class="logo" src="/assets/logo.png"/>
       </a>
       <nav class="links-topo">
         <a href="#">Sobre</a>
